fix(retina): use Java 8-compatible Set construction in StorageGcWal test